--- a/contador/counter.html
+++ b/contador/counter.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Animated Counter on Scroll Using HTML,CSS and JavaScript</title>
     <!-- ALL IMPORTANT LINK >> DONT FORGET TO ADD -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="contador\count.css">
     <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -39,6 +39,6 @@
         </div>
     </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="count.js"></script>
+<script src="contador\count.js"></script>
 </body>
 </html>
