--- a/index.html
+++ b/index.html
@@ -74,5 +74,5 @@
     <footer>
        <p> © 2023 KREZCO </p>
     </footer>
-    <script src="codigo.js"></script>
+    <script src="codigo2.js"></script>
 </html>
